force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <label>Account Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>