force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/CSM_Account_Mgr_Name__c.field-meta.xml
<CustomField>
    <fullName>CSM_Account_Mgr_Name__c</fullName>
    <label>CSM Account Mgr. Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>