force-app/main/default/objects/JBCXM__CustomerInfo__c/fields/CSM_Notes__c.field-meta.xml
<CustomField>
    <fullName>CSM_Notes__c</fullName>
    <label>CSM Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>